<resources>
    <string name="app_name">MVVM_Coroutines</string>
    <string name="full_name">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Enter the password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_in1">SIGN IN</string>
    <string name="add_image">Add Image</string>
    <string name="register">REGISTER</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>


</resources>