<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_back"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_105sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/sign_in1"
            android:textColor="@color/white1"
            android:textSize="@dimen/_30sdp" />

        <EditText
            android:id="@+id/edtGmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/C4C4C4C4"
            android:textColor="@color/C4C4C4C4"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:textColor="@color/C4C4C4C4"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="@color/C4C4C4C4"
            android:textSize="@dimen/_15sdp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/Button"
            android:text="@string/sign_in1"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/white1"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>